style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }

  @import url('https://fonts.googleapis.com/css?family=Oswald');
  
  body {
    font-family: 'Kanit', sans-serif;

  }
  
  #navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 2rem;
    background-color: #ffffff;
    border-bottom: 2.5px solid #272727; /* Add a thin outline to the nav bar */
  }
  
  .text-logo {
    color: rgb(0, 0, 0);
    font-size: 24px;
    text-decoration: none;
    font-weight: 600;
    transition: all 0.3s ease;
    
  }
  
  .text-logo:hover {
    color: #ff9800; /* Change the color when hovered */
  }
  
  .logo {
    display: inline-block;
    position: relative;
    height: 40px;
  }
  
  .logo-container {
    position: relative;
    height: 100%;
  }
  
  .logo-normal,
  .logo-hover {
    position: absolute;
    top: 0;
    left: 0;
    height: 40px; /* Adjust the height to fit your design */
    width: auto;
    transition: opacity 0.3s ease; /* Add a smooth transition for the opacity */
  }
  
  .logo-hover {
    opacity: 0;
  }
  
  .logo:hover .logo-normal {
    opacity: 0;
  }
  
  .logo:hover .logo-hover {
    opacity: 1;
  }
  .hamburger-menu {
    display: none;
    cursor: pointer;
    position: relative;
    order: 1;
    transition: color 0.3s ease;
  }

  .hamburger-menu:hover {
    color: rgb(174, 255, 44); /* Change the color when hovered */
  }
  
  .hamburger-menu:hover .bar {
    background-color: rgb(174, 255, 44); /* Change the color when hovered */
  }
  
  .hamburger-menu .bar {
    width: 25px;
    height: 3px;
    background-color: rgb(0, 0, 0);
    margin: 4px 0;
    transition: all 0.3s ease;
  }
  
  .nav-links {
    display: flex;
    list-style: none;
  }
  
  .nav-links li a {
    color: rgb(0, 0, 0);
    text-decoration: none;
    padding: 1rem 1.5rem;
    display: inline-block;
    transition: all 0.3s ease;
  }

  .nav-links li a:hover {
    color: rgb(174, 255, 44); /* Change the color when hovered */
    /* text-decoration: underline; /* Add an underline when hovered */
  }  
  
  .parallax {
    background-image: url('img/2199583.jpg');
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 80vh;
  }

  .header-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 80vh;
    position: relative;
    z-index: 1;
  }
  
  .header-content {
    text-align: center;
    color:rgba(255, 255, 255, 0.8);
    position: relative;
    z-index: 2;
  }
  
  
  .header-content {
    text-align: center;
    color: rgb(29, 29, 29);
  }
  
  .header-content h1 {
    font-size: 48px;
    margin-bottom: 1rem;
    font-family: 'Planet Kosmos', sans-serif; /* Replace '<font-name>' with the name you used in the @font-face rule */
    font-weight: normal;
    font-style: normal;
  }

  .header-button {
    background-color: rgb(103, 167, 2);
    font-family: 'Kanit';
    color: white;
    font-size: 18px;
    border: none;
    border-radius: 5px; /* Create rounded corners */
    padding: 10px 20px;
    cursor: pointer;
    margin: 0 10px; /* Add some space between the buttons */
    transition: all 0.3s ease;
  }
  
  .header-button:hover {
    background-color: rgb(174, 255, 44); /* Change the background color on hover */
  }
  
  section {
    padding: 2rem;
    font-size: 18px;
  }
  
  
  svg {
    fill: white;
    width: 100%;
    height: 10vh;
  }
  
  
  /* Transform the top bar into an angled line */
  .hamburger-menu.open .bar:nth-child(1) {
    transform: translateY(7px) rotate(45deg);
  }
  
  /* Hide the middle bar */
  .hamburger-menu.open .bar:nth-child(2) {
    opacity: 0;
  }
  
  /* Transform the bottom bar into an angled line */
  .hamburger-menu.open .bar:nth-child(3) {
    transform: translateY(-7px) rotate(-45deg);
  }
  
  @media (max-width: 768px) {
    .nav-links {
      display: none;
    }
  
    .hamburger-menu {
      display: block;
    }
  
    #navbar {
      justify-content: space-between;
    }
  }

  .logo {
    display: inline-block;
  }
  
  .logo img {
    height: 70px; /* Adjust the height to fit your design */
    width: auto;
  }

  /* Arrow */
  
  .scroll-arrow {
    font-size: 32px;
    color: rgb(103, 167, 2);
    text-decoration: none;
    position: absolute;
    bottom: 20px;
    left: 50%;
    transform: translateX(-50%);
    animation: bounce 2s infinite;
    transition: color 0.3s ease;
  }

  .scroll-arrow:hover {
    color: rgb(174, 255, 44) /* Change the color when hovered */
  }
  
  
  @keyframes bounce {
    0%,
    20%,
    50%,
    80%,
    100% {
      transform: translateX(-50%) translateY(0);
    }
    40% {
      transform: translateX(-50%) translateY(-30px);
    }
    60% {
      transform: translateX(-50%) translateY(-15px);
    }
  }
  
  /* Footer */

footer {
  background-color: #ffffff;
  padding: 1rem 1rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
  border-top: 2.5px solid #272727;
  flex-wrap: wrap;
}

.copyright {
  color: #272727;
  font-size: 14px;
  text-align: center;
  width: 100%; /* Add this line to make the copyright div take full width */
  order: 3; /* Add this line to push the copyright div below the other two */
  padding-top: 1rem; /* Add some padding to create space between the copyright text and the links/icons */
}

.footer-links,
.social-media {
  display: flex;
  flex-direction: column;
  gap: 0.3rem;
  list-style: none;
  text-align: center;
  margin: 0 5rem;
}

.social-icon,
.footer-links a {
  text-decoration: none;
  color: rgb(0, 0, 0);
  font-size: 18px;
  transition: color 0.3s ease;
  display: flex;
  align-items: center;
}

.social-icon i {
  margin-right: 8px; /* Add this line to create some space between the icon and the text */
}

.social-icon:hover,
.footer-links a:hover {
  color: rgb(174, 255, 44)  /* Change the color when hovered */
}

/* scroll to top */

.scroll-to-top {
  position: fixed;
  bottom: 20px;
  right: 20px;
  color: #ffffff;
  background-color: rgb(103, 167, 2);
  border-radius: 50%;
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  opacity: 0;
  transition: background-color 0.3s ease, opacity 0.5s ease;
}

.scroll-to-top:hover {
  background-color: rgb(174, 255, 44) 
}

.visible {
  opacity: 1;
}

/* custom font*/

@font-face {
  font-family: 'Planet Kosmos';
  src: url('fonts/plank___-webfont.woff2) format('woff2'),
       url('fonts/plank___-webfont.woff2') format('woff'),
       url('fonts/<font-file>.eot') format('embedded-opentype');
  font-weight: normal;
  font-style: normal;
}

